# applewatch

./: .env.example  .gitignore  README.md  ROADMAP.md  claude-watch.toml.example  pyproject.toml
.claude/: gloop-config.json  settings.json
claude_watch/: bot.py  claude_runner.py  server.py  session_io.py  webhook.py
deploy/: claude-watch.service
docs/adr/: phase2-interactive-session-control.md  phase2-session-selection.md
features/.intake/: issue-1.yaml  issue-2.yaml
features/11-p2-1-send-keys-jsonl-tail/: codex-design-architect.yaml  codex-design-contrarian.yaml  codex-design-migration.yaml  codex-final-architect.yaml  codex-final-contrarian.yaml  codex-final-migration.yaml  codex-final.yaml  codex-final.yaml.verdict.json  codex-input.md  debug-spec.md  judgment-summary.md  plan.md  rejection.md  state.json  test-spec.md  test-summary.json
features/11-p2-1-send-keys-jsonl-tail/plan-snapshots/: plan.md.round-1
features/5-p2-b-claude-p-c-r-bot-webhook/: codex-design-architect.yaml  codex-design-contrarian.yaml  codex-design-migration.yaml  codex-design.yaml  codex-final-architect.yaml  codex-final-contrarian.yaml  codex-final-migration.yaml  codex-final.yaml  codex-final.yaml.verdict.json  codex-input.md  debug-spec.md  plan.md  rejection.md  state.json  test-spec.md  test-summary.json
features/5-p2-b-claude-p-c-r-bot-webhook/plan-snapshots/: plan.md.round-1
tests/: conftest.py  test_bot.py  test_claude_runner.py  test_p2_1_session.py  test_p2b_session.py  test_webhook.py
